--- a/ecom-frontend/src/app/layout/footer/footer.component.html
+++ b/ecom-frontend/src/app/layout/footer/footer.component.html
@@ -1,1 +1,43 @@
-<p>footer works!</p>
+<footer class="footer bg-secondary border-2 border-t text-base-content p-10">
+  <nav>
+    <h6 class="footer-title">Help</h6>
+    <a href="#" class="link link-hover">Shipping</a>
+    <a href="#" class="link link-hover">Returns + Exchanges</a>
+    <a href="#" class="link link-hover">FAQ</a>
+    <a href="#" class="link link-hover">Compare</a>
+  </nav>
+  <nav>
+    <h6 class="footer-title">Company</h6>
+    <a href="#" class="link link-hover">About us</a>
+    <a href="#" class="link link-hover">Contact</a>
+    <a href="#" class="link link-hover">Jobs</a>
+    <a href="#" class="link link-hover">Press Kit</a>
+  </nav>
+  <nav>
+    <h6 class="footer-title">Legal</h6>
+    <a href="#" class="link link-hover">Terms Of Use</a>
+    <a href="#" class="link link-hover">Privacy Policy</a>
+    <a href="#" class="link link-hover">Cookie Policy</a>
+  </nav>
+</footer>
+<footer class="footer bg-secondary text-base-content px-10 py-4">
+  <aside class="grid-flow-col items-center">
+    <fa-icon class="pe-3" [icon]="['fas', 'truck-fast']" size="3x"></fa-icon>
+    <p>
+      Developed by FilipeDevs
+    </p>
+  </aside>
+  <nav class="md:place-self-center md:justify-self-end">
+    <div class="grid grid-flow-col gap-4">
+      <a href="https://github.com/FilipeDevs" aria-label="Github" target="_blank">
+        <fa-icon [icon]="['fab', 'github']" size="2x"></fa-icon>
+      </a>
+      <a href="https://www.linkedin.com/in/filipe-pereira-martins/" aria-label="Linkedin" target="_blank">
+        <fa-icon [icon]="['fab', 'linkedin']" size="2x"></fa-icon>
+      </a>
+      <a href="mailto:filipe.pereira.dev@gmail.com" aria-label="Filipe" target="_blank">
+        <fa-icon [icon]="['fas', 'envelope']" size="2x"></fa-icon>
+      </a>
+    </div>
+  </nav>
+</footer>
