feat : setup kinde auth

--- a/ecom-frontend/src/app/layout/navbar/navbar.component.html
+++ b/ecom-frontend/src/app/layout/navbar/navbar.component.html
@@ -30,13 +30,31 @@
   <div class="navbar-end pe-4 flex align-items-center">
     <div class="dropdown dropdown-end pe-4">
       <div tabindex="0" role="button">
-        <fa-icon [icon]="['fas', 'user']" class="menu-icon"></fa-icon>
+        @if (this.isConnected() && connectedUserQuery?.data()?.imageUrl !== null) {
+          <div class="border border-solid rounded-full">
+            <img src="{{connectedUserQuery?.data()?.imageUrl}}" alt="user-avatar"
+                 class="avatar-unknown rounded-full" width="45px" />
+          </div>
+        } @else {
+          <fa-icon [icon]="['fas', 'user']" class="menu-icon"></fa-icon>
+        }
       </div>
-      <ul class="dropdown-content menu menu-lg bg-base-100 rounded-box z-10 w-52 p-2 shadow">
-        <li>
-          <button class="link">Login</button>
-        </li>
-      </ul>
+      @if (this.isConnected()) {
+        <ul class="dropdown-content menu menu-lg bg-base-100 rounded-box z-10 w-52 p-2 shadow">
+          <li>
+            <button class="link" (click)="closeDropDownMenu()" routerLink="/users/orders">My Orders</button>
+          </li>
+          <li>
+            <button class="link" (click)="logout()">Logout</button>
+          </li>
+        </ul>
+      } @else {
+        <ul class="dropdown-content menu menu-lg bg-base-100 rounded-box z-10 w-52 p-2 shadow">
+          <li>
+            <button class="link" (click)="login()">Login</button>
+          </li>
+        </ul>
+      }
     </div>
     <div class="dropdown dropdown-end me-2" routerLink="/cart">
       <div tabindex="0" role="button">
