--- a/ecom-frontend/src/app/shop/product-detail/product-detail.component.html
+++ b/ecom-frontend/src/app/shop/product-detail/product-detail.component.html
@@ -32,7 +32,8 @@
         {{ productQuery.data().description }}
       </div>
       <button class="btn btn-primary mt-5 w-full lg:w-64"
-              [disabled]="productQuery.data().nbInStock <= 0">
+              [disabled]="productQuery.data().nbInStock <= 0"
+              (click)="addToCart(productQuery.data()!)">
         <fa-icon class="me-1" [icon]="['fas', iconAddToCart]"></fa-icon>
         {{ labelAddToCart }}
       </button>
