--- a/ecom-frontend/src/app/layout/navbar/navbar.component.html
+++ b/ecom-frontend/src/app/layout/navbar/navbar.component.html
@@ -36,6 +36,9 @@
               <li>
                 <a routerLink="admin/products/list" (click)="closeMenu(adminMenu)" (clickOutside)="closeMenu(adminMenu)">Products</a>
               </li>
+              <li>
+                <a routerLink="admin/orders/list" (click)="closeMenu(adminMenu)" (clickOutside)="closeMenu(adminMenu)">Orders</a>
+              </li>
             </ul>
           </details>
         </li>
