--- a/ecom-frontend/src/app/admin/product/admin-products/admin-products.component.html
+++ b/ecom-frontend/src/app/admin/product/admin-products/admin-products.component.html
@@ -42,11 +42,14 @@
             </td>
             <td>{{product.price}}</td>
             <td>{{product.nbInStock}}</td>
-            <td>{{product.featured}}</td>
+            <td>{{ product.featured ? 'Yes' : 'No' }}</td>
             <td>{{product.category.name}}</td>
-            <td>
-              <div (click)="deleteProduct(product.publicId!)" class="btn btn-secondary btn-sm">
+            <td class="space-x-2">
+              <div (click)="deleteProduct(product.publicId!)" class="btn btn-warning btn-sm">
                 Delete
+              </div>
+              <div class="btn btn-secondary btn-sm" [routerLink]="['/admin/products/edit', product.publicId]">
+                Edit
               </div>
             </td>
           </tr>
