--- a/ecom-frontend/src/app/home/featured/featured.component.html
+++ b/ecom-frontend/src/app/home/featured/featured.component.html
@@ -1,8 +1,9 @@
-<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3
-lg:grid-cols-4 w-full">
+<div class="carousel w-full p-2">
   @if(featuredProductQuery.isSuccess()) {
     @for (product of featuredProductQuery.data().content; track product.publicId) {
-      <app-product-card [product]="product"></app-product-card>
+      <div class="carousel-item flex justify-center items-center mx-1 my-3 p-6">
+        <app-product-card [product]="product"></app-product-card>
+      </div>
     }
   }
 </div>
